--- a/docker-image/config/supervisord.conf
+++ b/docker-image/config/supervisord.conf
@@ -1,20 +1,8 @@
 [supervisord]
 nodaemon=true
 
-[program:php-fpm]
-command=php-fpm7 -F
-stdout_logfile=/dev/stdout
-stdout_logfile_maxbytes=0
-stderr_logfile=/dev/stderr
-stderr_logfile_maxbytes=0
-
-[program:nginx]
-command=nginx -g 'daemon off;'
-stdout_logfile=/dev/stdout
-stdout_logfile_maxbytes=0
-stderr_logfile=/dev/stderr
-stderr_logfile_maxbytes=0
-
+[program:apache2]
+command=/usr/sbin/apachectl -DFOREGROUND
 [program:redis]
 command=redis-server
 autorestart=true
