--- a/docker-image/Dockerfile
+++ b/docker-image/Dockerfile
@@ -4,7 +4,7 @@ MAINTAINER Viacheslav Pryimak <pbotanik@gmail.com>
 
 RUN echo  "http://dl-cdn.alpinelinux.org/alpine/edge/community" >> /etc/apk/repositories
 
-RUN apk update && apk add bash apache2 libxml2-dev apache2-utils mysql mysql-client supervisor redis  php7 curl ssmtp php7 php7-phar php7-curl \
+RUN apk update && apk add bash apache2 libxml2-dev apache2-utils php7-apache2 mysql mysql-client supervisor redis  php7 curl ssmtp php7 php7-phar php7-curl \
     php7-json php7-zlib php7-xml php7-dom php7-ctype php7-opcache php7-zip php7-iconv \
     php7-pdo php7-pdo_mysql php7-pdo_sqlite php7-pdo_pgsql php7-mbstring php7-session \
     php7-mcrypt php7-sockets && \
@@ -12,6 +12,7 @@ RUN apk update && apk add bash apache2 libxml2-dev apache2-utils mysql mysql-cli
 
 
 RUN mkdir -p /data/mysql /data/apache2/ /data/www/
+RUN chown -R mysql:mysql /data/mysql
 RUN rm -rf /etc/apache2
 RUN ln -s  /data/apache2 /etc/apache2
 # Configure supervisord
