--- a/data/apache2/httpd.conf
+++ b/data/apache2/httpd.conf
@@ -149,6 +149,8 @@ LoadModule autoindex_module modules/mod_autoindex.so
 #LoadModule asis_module modules/mod_asis.so
 #LoadModule info_module modules/mod_info.so
 #LoadModule suexec_module modules/mod_suexec.so
+LoadModule php7_module  modules/mod_php7.so
+
 <IfModule !mpm_prefork_module>
 	#LoadModule cgid_module modules/mod_cgid.so
 </IfModule>
