File structure reorganization

--- a/config/supervisord.conf
+++ b/config/supervisord.conf
@@ -3,9 +3,10 @@ nodaemon=true
 
 [program:apache2]
 command=/usr/sbin/apachectl -DFOREGROUND
+
 [program:redis]
 command=redis-server
 autorestart=true
 
 [program:mysql]
-command=/bin/sh /tmp/run.sh
+command=mysqld_safe --datadir=/var/lib/mysql
