--- a/data/apache2/httpd.conf
+++ b/data/apache2/httpd.conf
@@ -216,7 +216,7 @@ ServerSignature On
 #
 # If your host doesn't have a registered DNS name, enter its IP address here.
 #
-#ServerName www.example.com:80
+ServerName www.example.com
 
 #
 # Deny access to the entirety of your server's filesystem. You must
