--- a/data/apache2/conf.d/php7-module.conf
+++ b/data/apache2/conf.d/php7-module.conf
@@ -1,4 +1,4 @@
-LoadModule php7_module modules/mod_php7.so
+LoadModule php7_module /usr/lib/apache2/mod_php7.so
 
 DirectoryIndex index.php index.html
 AddHandler application/x-httpd-php .php
