--- a/data/apache2/conf.d/userdir.conf
+++ b/data/apache2/conf.d/userdir.conf
@@ -8,13 +8,13 @@
 # directory if a ~user request is received.  Note that you must also set
 # the default access control for these directories, as in the example below.
 #
-UserDir public_html
+UserDir public
 
 #
 # Control access to UserDir directories.  The following is an example
 # for a site where these directories are restricted to read-only.
 #
-<Directory "/home/*/public_html">
+<Directory "/data/www/*/public">
     AllowOverride FileInfo AuthConfig Limit Indexes
     Options MultiViews Indexes SymLinksIfOwnerMatch IncludesNoExec
     Require method GET POST OPTIONS
