--- a/data/apache2/httpd.conf
+++ b/data/apache2/httpd.conf
@@ -38,7 +38,7 @@ ServerTokens OS
 # same ServerRoot for multiple httpd daemons, you will need to change at
 # least PidFile.
 #
-ServerRoot /var/www
+ServerRoot /data/www
 
 #
 # Mutex: Allows you to set the mutex mechanism and mutex file directory
@@ -73,21 +73,21 @@ Listen 80
 # Example:
 # LoadModule foo_module modules/mod_foo.so
 #
-LoadModule authn_file_module modules/mod_authn_file.so
+LoadModule authn_file_module /usr/lib/apache2/mod_authn_file.so
 #LoadModule authn_dbm_module modules/mod_authn_dbm.so
 #LoadModule authn_anon_module modules/mod_authn_anon.so
 #LoadModule authn_dbd_module modules/mod_authn_dbd.so
 #LoadModule authn_socache_module modules/mod_authn_socache.so
-LoadModule authn_core_module modules/mod_authn_core.so
-LoadModule authz_host_module modules/mod_authz_host.so
-LoadModule authz_groupfile_module modules/mod_authz_groupfile.so
-LoadModule authz_user_module modules/mod_authz_user.so
+LoadModule authn_core_module /usr/lib/apache2/mod_authn_core.so
+LoadModule authz_host_module /usr/lib/apache2/mod_authz_host.so
+LoadModule authz_groupfile_module /usr/lib/apache2/mod_authz_groupfile.so
+LoadModule authz_user_module /usr/lib/apache2/mod_authz_user.so
 #LoadModule authz_dbm_module modules/mod_authz_dbm.so
 #LoadModule authz_owner_module modules/mod_authz_owner.so
 #LoadModule authz_dbd_module modules/mod_authz_dbd.so
-LoadModule authz_core_module modules/mod_authz_core.so
-LoadModule access_compat_module modules/mod_access_compat.so
-LoadModule auth_basic_module modules/mod_auth_basic.so
+LoadModule authz_core_module /usr/lib/apache2/mod_authz_core.so
+LoadModule access_compat_module /usr/lib/apache2/mod_access_compat.so
+LoadModule auth_basic_module /usr/lib/apache2/mod_auth_basic.so
 #LoadModule auth_form_module modules/mod_auth_form.so
 #LoadModule auth_digest_module modules/mod_auth_digest.so
 #LoadModule allowmethods_module modules/mod_allowmethods.so
@@ -106,29 +106,29 @@ LoadModule auth_basic_module modules/mod_auth_basic.so
 #LoadModule buffer_module modules/mod_buffer.so
 #LoadModule data_module modules/mod_data.so
 #LoadModule ratelimit_module modules/mod_ratelimit.so
-LoadModule reqtimeout_module modules/mod_reqtimeout.so
+LoadModule reqtimeout_module /usr/lib/apache2/mod_reqtimeout.so
 #LoadModule ext_filter_module modules/mod_ext_filter.so
 #LoadModule request_module modules/mod_request.so
 #LoadModule include_module modules/mod_include.so
-LoadModule filter_module modules/mod_filter.so
+LoadModule filter_module /usr/lib/apache2/mod_filter.so
 #LoadModule reflector_module modules/mod_reflector.so
 #LoadModule substitute_module modules/mod_substitute.so
 #LoadModule sed_module modules/mod_sed.so
 #LoadModule charset_lite_module modules/mod_charset_lite.so
 #LoadModule deflate_module modules/mod_deflate.so
-LoadModule mime_module modules/mod_mime.so
-LoadModule log_config_module modules/mod_log_config.so
+LoadModule mime_module /usr/lib/apache2/mod_mime.so
+LoadModule log_config_module /usr/lib/apache2/mod_log_config.so
 #LoadModule log_debug_module modules/mod_log_debug.so
 #LoadModule log_forensic_module modules/mod_log_forensic.so
 #LoadModule logio_module modules/mod_logio.so
-LoadModule env_module modules/mod_env.so
+LoadModule env_module /usr/lib/apache2/mod_env.so
 #LoadModule mime_magic_module modules/mod_mime_magic.so
 #LoadModule expires_module modules/mod_expires.so
-LoadModule headers_module modules/mod_headers.so
+LoadModule headers_module /usr/lib/apache2/mod_headers.so
 #LoadModule usertrack_module modules/mod_usertrack.so
 #LoadModule unique_id_module modules/mod_unique_id.so
-LoadModule setenvif_module modules/mod_setenvif.so
-LoadModule version_module modules/mod_version.so
+LoadModule setenvif_module /usr/lib/apache2/mod_setenvif.so
+LoadModule version_module /usr/lib/apache2/mod_version.so
 #LoadModule remoteip_module modules/mod_remoteip.so
 #LoadModule session_module modules/mod_session.so
 #LoadModule session_cookie_module modules/mod_session_cookie.so
@@ -139,32 +139,32 @@ LoadModule version_module modules/mod_version.so
 #LoadModule dialup_module modules/mod_dialup.so
 #LoadModule http2_module modules/mod_http2.so
 #LoadModule mpm_event_module modules/mod_mpm_event.so
-LoadModule mpm_prefork_module modules/mod_mpm_prefork.so
+LoadModule mpm_prefork_module /usr/lib/apache2/mod_mpm_prefork.so
 #LoadModule mpm_worker_module modules/mod_mpm_worker.so
-LoadModule unixd_module modules/mod_unixd.so
+LoadModule unixd_module /usr/lib/apache2/mod_unixd.so
 #LoadModule heartbeat_module modules/mod_heartbeat.so
 #LoadModule heartmonitor_module modules/mod_heartmonitor.so
-LoadModule status_module modules/mod_status.so
-LoadModule autoindex_module modules/mod_autoindex.so
+LoadModule status_module /usr/lib/apache2/mod_status.so
+LoadModule autoindex_module /usr/lib/apache2/mod_autoindex.so
 #LoadModule asis_module modules/mod_asis.so
 #LoadModule info_module modules/mod_info.so
 #LoadModule suexec_module modules/mod_suexec.so
 <IfModule !mpm_prefork_module>
-	#LoadModule cgid_module modules/mod_cgid.so
+	#LoadModule cgid_module /usr/lib/apache2/mod_cgid.so
 </IfModule>
 <IfModule mpm_prefork_module>
 	#LoadModule cgi_module modules/mod_cgi.so
 </IfModule>
 #LoadModule vhost_alias_module modules/mod_vhost_alias.so
 #LoadModule negotiation_module modules/mod_negotiation.so
-LoadModule dir_module modules/mod_dir.so
+LoadModule dir_module /usr/lib/apache2/mod_dir.so
 #LoadModule actions_module modules/mod_actions.so
 #LoadModule speling_module modules/mod_speling.so
 #LoadModule userdir_module modules/mod_userdir.so
-LoadModule alias_module modules/mod_alias.so
+LoadModule alias_module /usr/lib/apache2/mod_alias.so
 #LoadModule rewrite_module modules/mod_rewrite.so
 
-LoadModule negotiation_module modules/mod_negotiation.so
+LoadModule negotiation_module /usr/lib/apache2/mod_negotiation.so
 
 <IfModule unixd_module>
 #
@@ -240,8 +240,8 @@ ServerName www.example.com
 # documents. By default, all requests are taken from this directory, but
 # symbolic links and aliases may be used to point to other locations.
 #
-DocumentRoot "/var/www/localhost/htdocs"
-<Directory "/var/www/localhost/htdocs">
+DocumentRoot "/data/www/localhost/public"
+<Directory "/data/www/localhost/public">
     #
     # Possible values for the Options directive are "None", "All",
     # or any combination of:
@@ -274,7 +274,7 @@ DocumentRoot "/var/www/localhost/htdocs"
 # is requested.
 #
 <IfModule dir_module>
-    DirectoryIndex index.html
+    DirectoryIndex index.php
 </IfModule>
 
 #
@@ -357,7 +357,7 @@ LogLevel warn
     # client.  The same rules about trailing "/" apply to ScriptAlias
     # directives as to Alias.
     #
-    ScriptAlias /cgi-bin/ "/var/www/localhost/cgi-bin/"
+    ScriptAlias /cgi-bin/ "/data/www/localhost/cgi-bin/"
 
 </IfModule>
 
@@ -373,7 +373,7 @@ LogLevel warn
 # "/var/www/localhost/cgi-bin" should be changed to whatever your ScriptAliased
 # CGI directory exists, if you have that configured.
 #
-<Directory "/var/www/localhost/cgi-bin">
+<Directory "/data/www/localhost/cgi-bin">
     AllowOverride None
     Options None
     Require all granted
